--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,10 @@
     <meta name="twitter:image" content="/images/iedulogo.png" />
     
     <title>AI Education - Образование в Италии</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Story+Script&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
